Addresed Review Points Part 1
